# day14_executive-shadow-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: api.py  config.py  db.py  llm.py  logging.py  main.py  models.py  repositories.py  schemas.py  security.py  seed.py  service.py
app/connectors/: email.py  slack.py
app/ui/: dashboard.html
